tests/negative/typecheck/try-function.orng
fn main() -> Int {
    try f()
}

fn f() -> Char!Int {
    return .err <- 'd'
}